[tool.poetry]
name = "temp-robo-arm"
version = "0.1.0"
description = "Robot arm for team temp"
authors = ["temp"]

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
